--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Bradley Hand ITC";
+    font-family: Tahoma, Verdana, Segoe, sans-serif;
     background-color: #545454;
     display: flex;
     flex-direction: column;
@@ -15,4 +15,41 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.button-position {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button {
+    position: absolute;
+    font-size: 1.5em;
+    box-shadow: inset 0px 1px 0px 0px #54a3f7;
+    background: linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
+    background-color: #007dc1;
+    border-radius: 3px;
+    border: 1px solid #124d77;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #154682;
+    margin: 8px;
+    bottom: 50px;
+}
+
+.d-none {
+    display: none
+}
+
+.title {
+    color: blue;
+    font-family: "Bradley Hand ITC";
+    position: absolute;
+    font-size: 7.5em;
+    top: 90px;
 }
