--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,99 @@
-body {
-    font-family: Tahoma, Verdana, Segoe, sans-serif;
-    background-color: #545454;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-}
-
-.canvas-container {
-    width: 820px;
-    height: 450px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.button-position {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-button {
-    position: absolute;
-    font-size: 1.5em;
-    box-shadow: inset 0px 1px 0px 0px #54a3f7;
-    background: linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
-    background-color: #007dc1;
-    border-radius: 3px;
-    border: 1px solid #124d77;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial;
-    padding: 6px 24px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #154682;
-    margin: 8px;
-    bottom: 50px;
-}
-
-.d-none {
-    display: none
-}
-
-.title {
-    color: blue;
-    font-family: "Bradley Hand ITC";
-    position: absolute;
-    font-size: 7.5em;
-    top: 90px;
-}
+      body {
+          font-family: Tahoma, Verdana, Segoe, sans-serif;
+          background-color: #545454;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          color: white;
+      }
+      
+      .canvas-container {
+          width: 820px;
+          height: 450px;
+          position: relative;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+      }
+      
+      .button-position {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+      }
+      
+      button {
+          position: absolute;
+          font-size: 1.5em;
+          box-shadow: inset 0px 1px 0px 0px #54a3f7;
+          background: linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
+          background-color: #007dc1;
+          border-radius: 3px;
+          border: 1px solid #124d77;
+          display: inline-block;
+          cursor: pointer;
+          color: #ffffff;
+          font-family: Arial;
+          padding: 6px 24px;
+          text-decoration: none;
+          text-shadow: 0px 1px 0px #154682;
+          margin: 8px;
+          bottom: 50px;
+      }
+      
+      .d-none {
+          display: none
+      }
+      
+      .title {
+          color: blue;
+          font-family: "Bradley Hand ITC";
+          position: absolute;
+          font-size: 7.5em;
+      }
+      
+      .mobile-instructions {
+          display: none;
+          position: absolute;
+          z-index: 5;
+      }
+      /* Smartphones and tablets (Landscape-View) */
+      
+      @media (max-width: 830px) {
+          .title {
+              font-size: 5.5em;
+          }
+          body {
+              margin: 0;
+              overflow: hidden;
+          }
+          h1 {
+              display: none;
+          }
+          .wrapper {
+              transform: rotate(90deg);
+              transform-origin: bottom left;
+              position: absolute;
+              top: -100vw;
+              left: 0;
+              height: 100vw;
+              width: 99.9vh;
+          }
+          .mobile-instructions {
+              display: flex;
+              width: 60vw;
+              right: 150px;
+          }
+          #canvas {
+              width: 100%;
+              height: 100%;
+          }
+          .canvas-container {
+              width: 100%;
+              height: 100%;
+          }
+          .description {
+              display: none;
+          }
+      }
