--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,15 @@
           color: white;
       }
       
+      h1 {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+      }
+      
       .canvas-container {
-          width: 820px;
-          height: 450px;
+          width: 100%;
+          height: 100%;
           position: relative;
           display: flex;
           align-items: center;
